<resources>
    <string name="app_name">MyContacts</string>
    <string name="person_name">Person Name</string>
    <string name="ayrac">-</string>
    <string name="person_phone">Person Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registraction">Registraction</string>
    <string name="save">Save</string>
    <string name="person_detail">Person Detail</string>
    <string name="update">Update</string>
</resources>